[package]
name = "pxrem"
version = "0.2.0"
authors = ["Nic Westvold <nicwestvold@gmail.com>"]
license = "MIT"
description = "A tool to convert pixel to rem value"
readme = "README.md"
homepage = "https://github.com/nicwestvold/pxrem"
repository = "https://github.com/nicwestvold/pxrem"
keywords = ["cli", "pixel", "rem"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
exitfailure = "0.5.1"
failure = "0.1.5"
structopt = "0.2.16"
